# MidasMinerClone

./: CMakeLists.txt  README.md
CMake/Modules/: FindSDL2_mixer.cmake
src/: CMakeLists.txt  Const.h  Engine.cpp  Engine.h  Field.cpp  Field.h  Font.cpp  Font.h  Game.cpp  Game.h  Gem.cpp  Gem.h  Music.cpp  Music.h  Sound.cpp  Sound.h  Sprite.cpp  Sprite.h  Text.cpp  Text.h  Texture.cpp  Texture.h  TextureEntity.cpp  TextureEntity.h  main.cpp
src/engine/: CMakeLists.txt  Engine.cpp  Engine.h  Font.cpp  Sound.h  Sprite.h
